Finished chrome extension with notifications

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,9 +11,10 @@
     }
   ],
   "permissions": [
-    "contextMenus",
     "tabs",
-    "storage"
+    "storage",
+    "activeTab",
+    "contextMenus"
   ],
   "background": {
     "scripts": ["js/background.js"]
