Updating picky-highlight and adding readme

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -32,6 +32,6 @@
   "icons": {
     "128": "./img/icon.png"
   },
-  "homepage_url"      : "https://github.com/corysimmons/picky.json/tree/gh-pages",
+  "homepage_url": "https://github.com/danjford/pickyjson-extension",
   "options_page": "options.html"
 }
